infra/kubernetes/apps/analyzer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer-service
  namespace: sentinelops-core
spec:
  selector:
    app: analyzer-service
  ports:
  - port: 80
    targetPort: 8080
